# JorG

./: .bettercodehub.yml  .gitignore  .gitignore.orig  .install.gsl.sh  .travis.yml  CONTRIBUTING.md  INSTALL  LICENSE  POSCAR  POSCARloader.py  README.md  README.md.orig  argv.py  best.flips.rerun  codecov.yml  coverage.sh  heisenberg.py  install-asa.sh  install-gsl.sh  install-requirements.sh  requirements.txt  requirements_tests.txt  run_all_tests.sh  setup.py  tmp.py  tst.py
JorG/: .Masks.py.swp  .equivalent.py.swp  .generator.py.swp  Masks.py  POSCARloader.py  PeriodicTable.py  \  _tmp_loadsave.py  _working_py  argv.py  configurations.py  equivalent.py  format.py  generator.py  heisenberg.py  loadsave.py  pickup.py  run_all_tests.sh  showcell.py  symmetry.py  vasprun.py  voronoi.py  working_equivalent.py
JorGpi/: CODE_OF_CONDUCT.md  POSCAR  POSCARloader.py  __main__.py  argv.py  crun.py  equivalent.py  generator.py  heisenberg.py  iohandlers.py  loadsave.py  run.py  symmetry.py
JorGpi/tests/crun/: CMakeLists.txt  Makefile  test.py
JorGpi/tests/crun/hello/: hello.h
JorGpi/tests/crun/loop/: loop.h
JorGpi/tests/crun/pi/: pi.cpp
JorGpi/tests/crun/sum/: sum.h
KPOINTS/: POSCAR  loadsave.py  possibleKpoints.py
WIP/: __main__.py  voronoi.py
WiP/: WiP.py
_INPUT/: POSCAR
asa/: asa.h  ising.h
ascii/: convert.py  convert_back.py  loremipsum.01t  loremipsum.txt  made.txt  zer.txt
aux/: Masks.py  PeriodicTable.py  argv.py  format.py  periodic.py  symmetry.py
bikini/: POSCAR  print_magmoms.sh  symek.py
crun/: crun.py
dispersion/: dispersion.eps  tmp  (+2 more)
(+769 files in other folders)
